finish approve / decline pickup request
